fix overflow + add responsive

--- a/8-card-flip/style.css
+++ b/8-card-flip/style.css
@@ -8,19 +8,26 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 
 }
+
+/* html {
+    height: 100vh;
+} */
 
 body {
     font-family: montserrat, sans-serif;
     width: 100%;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    height: 100vh;
 }
 
 .card {
-    margin: 100px auto 0;
+    margin: 0 auto 0;
+    padding: 100px 0 0;
     width: 400px;
-    height: 600px;
+    height: 700px;
     perspective: 1000px;
 }
 
@@ -97,6 +104,7 @@ body {
     background-color: #fff;
     border: 5px solid #fff;
     object-fit: cover;
+    user-select: none;
 }
 
 .card__header h2 {
@@ -122,4 +130,43 @@ body {
     color: var(--dark);
     font-size: 18px;
     line-height: 1.4;
+}
+
+
+@media (max-width:1000px) {
+    .card__header h2 {
+        font-size: 30px;
+    }
+
+    .card__body h3 {
+        font-size: 24px;
+    }
+
+    .card__body p {
+        font-size: 18px;
+        line-height: 1.3;
+    }
+}
+
+
+@media (max-width:600px) {
+    .card {
+        margin: 0 auto 0;
+        padding: 50px 0 0;
+        width: 90vw;
+        height: 90vh;
+    }
+
+    .card__header h2 {
+        font-size: 28px;
+    }
+
+    .card__body h3 {
+        font-size: 22px;
+    }
+
+    .card__body p {
+        font-size: 16px;
+        line-height: 1.3;
+    }
 }
